--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "iusm",
   "private": true,
   "dependencies": {
+    "lightbox2": "^2.10.0",
     "popper.js": "^1.14.3",
     "startbootstrap-freelancer": "^4.0.0"
   }
