Fixed the gems and database migration

--- a/config/database.yml
+++ b/config/database.yml
@@ -8,15 +8,15 @@ default: &default
 
 development:
   <<: *default
-  database: iusm_development
+  database: bingo_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: iusm_test
+  database: bingo_test
 
 production:
   <<: *default
-  database: iusm_production
+  database: bingo_production
